welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:3: error: not found: value estFacemru
while (!estFacemru()){
        ^Runner:12: error: reassignment to val
  step=step+1
      ^